Fixed 373 - Re-visit the need for -webkit-backface-visibility property on ui-page
- Removed -webkit-backface-visibility from all general rules and placed it in the .slide transition rule. It was impacting scroll performance and causing some rendering problems on iOS 3.1.x and some Android platforms.

--- a/themes/default/jquery.mobile.core.css
+++ b/themes/default/jquery.mobile.core.css
@@ -10,18 +10,14 @@
 .ui-mobile a img, .ui-mobile fieldset { border: 0; }
 
 /* responsive page widths */
-.ui-mobile-viewport {  margin: 0; overflow-x: hidden; -webkit-backface-visibility:hidden; -webkit-text-size-adjust: none; -ms-text-size-adjust:none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+.ui-mobile-viewport {  margin: 0; overflow-x: hidden; -webkit-text-size-adjust: none; -ms-text-size-adjust:none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 /*orientations from js are available */
 .portrait {  }
 .landscape {  }
 
 /* "page" containers - full-screen views, one should always be in view post-pageload */
-.ui-page {
-	top: 0; left: 0; width: 100%; min-height: 100%; position: absolute; display: none; border: 0;
-	-webkit-backface-visibility:hidden; /* Seems to prevent tile rendering from being visible while scrolling. */
-	-webkit-transform:translateX(0); /* Needed to work around an iOS 3.1 bug that causes listview thumbs to disappear when -webkit-visibility:hidden is used. */
-} 
+.ui-page { top: 0; left: 0; width: 100%; min-height: 100%; position: absolute; display: none; border: 0; } 
 .ui-page-active { display: block; overflow: visible; min-height: 100%; }
 
 /* loading screen */
